# aktor

./: Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
examples/: ask_pattern_demo.rs  bench_burst_routing.rs  bench_crawler_topology.rs  bench_idle_latency.rs  bench_sparse_io.rs  http_extension.rs  performance_benchmark.rs  test_kit_demo.rs
scripts/: bench_compare.sh
src/: actor.rs  ask.rs  ask_integration_test.rs  context.rs  lib.rs  prelude.rs  reference.rs  system.rs  test_kit.rs
src/core/: actor.rs  message.rs  mod.rs
src/extensions/: async_http_client.rs  http_client.rs  mod.rs
src/reference/: actor_ref.rs  ask.rs  ask_integration_test.rs  mod.rs
src/system/: actor_system.rs  address.rs  context.rs  extension.rs  mod.rs  resolver.rs  system.rs  system_message.rs
src/testing/: mod.rs  test_kit.rs
