[package]
name = "aktor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6.1"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
