[package]
name = "aktor"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-util = ["tokio-test", "futures-test"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rand = "0.8"
rayon = "1.8"
crossbeam = "0.8"

# Optional dependencies for test-util feature
tokio-test = { version = "0.4", optional = true }
futures-test = { version = "0.3", optional = true }

[[example]]
name = "test_kit_demo"
required-features = ["test-util"]
